examples/Failing/Loops/fail_for_scope.c
int main() {
    for (int i = 0; i < 5; ++i) {
    }

    return i;
}
